[workspace]
members = [
    "bin/reth-benchmark",
    "crates/mpt",
    "crates/revm-crypto",
    "crates/stateless-executor",
    "crates/chainspec",
    "crates/stateless-witness",
    "crates/mpt-tools",
    "crates/rpc-proxy"
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.4.0"
repository = "https://github.com/axiom-crypto/openvm-eth"
homepage = "https://github.com/axiom-crypto/openvm-eth"
edition = "2024"
exclude = ["**/target"]

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
eyre = "0.6"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tokio = { version = "1.44.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "alloc",
    "serde",
] }
toml = "0.9.2"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"
actix-web = "4"
reqwest = "0.12.20"
tracing-actix-web = "0.7"
clap = "4.5.54"
tower = "0.5"
metrics = "0.24"
zstd = { version = "0.13", default-features = false }

# workspace
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }
openvm-stateless-executor = { path = "./crates/stateless-executor" }
openvm-chainspec = { path = "./crates/chainspec" }
# workspace (host only)
openvm-stateless-witness = { path = "./crates/stateless-witness", default-features = false }
openvm-rpc-proxy = { path = "./crates/rpc-proxy" }
openvm-reth-benchmark = { path = "./bin/reth-benchmark", default-features = false }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }

# revm
revm = { version = "34.0.0", features = ["serde"], default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }

# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-json-rpc = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

alloy-hardforks = { version = "0.4.5", default-features = false }

alloy = { version = "1.4.3", default-features = false }
alloy-eips = { version = "1.4.3", default-features = false }
alloy-consensus = { version = "1.4.3", default-features = false }
alloy-provider = { version = "1.4.3", default-features = false }
alloy-rpc-client = { version = "1.4.3", default-features = false }
alloy-rpc-types = { version = "1.4.3", default-features = false }
alloy-rpc-types-debug = { version = "1.4.3", default-features = false }
alloy-transport = { version = "1.4.3", default-features = false }

openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-beta", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-beta", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-beta", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-beta", default-features = false, features = [
    "bn254",
    "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-beta", default-features = false }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "develop-v2.0.0-beta" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "develop-v2.0.0-beta" }

openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", branch = "develop-v2.0.0-beta", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1
