[workspace]
members = [
    "bin/reth-benchmark",
    "bin/reth-verify",
    "crates/mpt",
    "crates/revm-crypto",
    "crates/stateless-executor",
    "crates/chainspec",
    "crates/stateless-witness",
    "crates/mpt-tools",
    "crates/rpc-proxy"
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.4.0"
repository = "https://github.com/axiom-crypto/openvm-eth"
homepage = "https://github.com/axiom-crypto/openvm-eth"
edition = "2024"
exclude = ["**/target"]

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
eyre = "0.6"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tokio = { version = "1.44.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "alloc",
    "serde",
] }
toml = "0.9.2"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"
actix-web = "4"
reqwest = "0.12.20"
tracing-actix-web = "0.7"
clap = "4.5.54"
tower = "0.5"
metrics = "0.24"
zstd = { version = "0.13", default-features = false }

# workspace
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }
openvm-stateless-executor = { path = "./crates/stateless-executor" }
openvm-chainspec = { path = "./crates/chainspec" }
# workspace (host only)
openvm-stateless-witness = { path = "./crates/stateless-witness", default-features = false }
openvm-rpc-proxy = { path = "./crates/rpc-proxy" }
openvm-reth-benchmark = { path = "./bin/reth-benchmark", default-features = false }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", default-features = false }

# revm
revm = { version = "34.0.0", features = ["serde"], default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }

# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-json-rpc = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

alloy-hardforks = { version = "0.4.5", default-features = false }

alloy = { version = "1.4.3", default-features = false }
alloy-eips = { version = "1.4.3", default-features = false }
alloy-consensus = { version = "1.4.3", default-features = false }
alloy-provider = { version = "1.4.3", default-features = false }
alloy-rpc-client = { version = "1.4.3", default-features = false }
alloy-rpc-types = { version = "1.4.3", default-features = false }
alloy-rpc-types-debug = { version = "1.4.3", default-features = false }
alloy-transport = { version = "1.4.3", default-features = false }
alloy-transport-http = { version = "1.4.3", default-features = false, features = ["reqwest-rustls-tls"] }

openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false, features = [
    "bn254",
    "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "develop-v2.0.0-rc.1" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "develop-v2.0.0-rc.1" }

openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false }

# powdr APC toolchain — tracks the openvm-v2 integration branch on powdr-labs/powdr.
# The transitive openvm-org deps these pull in are redirected via the `[patch]`
# sections at the bottom of this file to the powdr-labs forks at `v2-powdr-beta.2`.
powdr-autoprecompiles = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }
powdr-openvm = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }
powdr-openvm-riscv = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }
powdr-openvm-riscv-hints-circuit = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }
powdr-riscv-elf = { git = "https://github.com/powdr-labs/powdr.git", branch = "openvm-v2-integration-beta.2", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1

# Redirect every openvm-org git dep (including transitive ones pulled in through
# powdr, reth-benchmark and the guest) onto the powdr-labs forks at
# `v2-powdr-beta.2`. These are the same revs pinned by the powdr workspace.
[patch."https://github.com/openvm-org/openvm.git"]
openvm = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-algebra-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-algebra-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-algebra-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-benchmarks-prove = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-bigint-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-bigint-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-build = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-circuit-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-circuit-primitives = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-circuit-primitives-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-continuations = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-ecc-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-ecc-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-ecc-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-instructions = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-instructions-derive = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-keccak256 = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-keccak256-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-keccak256-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-macros-common = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-mod-circuit-builder = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-pairing = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-pairing-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-pairing-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-pairing-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-platform = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-poseidon2-air = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-rv32-adapters = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-rv32im-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-rv32im-guest = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-rv32im-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-sdk = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-sdk-config = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-sha2 = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-sha2-circuit = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-sha2-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-transpiler = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
openvm-verify-stark-host = { git = "https://github.com/powdr-labs/openvm.git", branch = "v2-powdr-beta.2" }
k256 = { git = "https://github.com/powdr-labs/openvm.git", package = "k256", branch = "v2-powdr-beta.2" }
p256 = { git = "https://github.com/powdr-labs/openvm.git", package = "p256", branch = "v2-powdr-beta.2" }

[patch."https://github.com/openvm-org/stark-backend.git"]
openvm-cpu-backend = { git = "https://github.com/powdr-labs/stark-backend.git", branch = "v2-powdr-beta.2" }
openvm-cuda-backend = { git = "https://github.com/powdr-labs/stark-backend.git", branch = "v2-powdr-beta.2" }
openvm-cuda-common = { git = "https://github.com/powdr-labs/stark-backend.git", branch = "v2-powdr-beta.2" }
openvm-stark-backend = { git = "https://github.com/powdr-labs/stark-backend.git", branch = "v2-powdr-beta.2" }
openvm-stark-sdk = { git = "https://github.com/powdr-labs/stark-backend.git", branch = "v2-powdr-beta.2" }
