[package]
name = "openvm-revm-crypto"
description = "OpenVM REVM and Alloy Crypto Provider Library"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }
alloy-consensus = { workspace = true, features = ["crypto-backend"] }

# OpenVM dependencies for optimized crypto (only needed when running in zkvm)
openvm-ecc-guest = { workspace = true }
openvm-sha2 = { workspace = true }
openvm-pairing = { workspace = true, features = ["bn254", "bls12_381"] }
openvm-k256 = { workspace = true }
openvm-p256 = { workspace = true }
openvm-kzg = { workspace = true, features = ["use-intrinsics"] }
openvm-keccak256 = { workspace = true }
aurora-engine-modexp = { version = "1.2.0", default-features = false }

[dev-dependencies]
# arkworks-rs
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"
ark-ec = "0.5"

[target.'cfg(target_os = "zkvm")'.dependencies]
revm-primitives = { workspace = true, features = ["hashbrown"] }
alloy-primitives = { workspace = true, features = ["native-keccak"] }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
openvm-sha2 = { workspace = true, features = ["import_sha2"] }
openvm-keccak256 = { workspace = true, features = ["tiny_keccak"] }
